# dtnn

./: README.md  dtnn.cabal
src/: Main.hs
